@@ -58,28 +58,30 @@ public class SecurityConfig {
                         .configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement((sessionManagement) -> sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))// spring security가 세션을 생성하지 않도록 설정
+                .with(new CustomFilterConfigurer(), Customizer.withDefaults()) // apply(new CustomFilterConfigurer) 로그인 경로 삽입
                 .exceptionHandling((exceptionHandling) ->
                         exceptionHandling.authenticationEntryPoint(new MemberAuthenticationEntryPoint())
                                 .accessDeniedHandler(new MemberAccessDeniedHandler()))
                 .authorizeHttpRequests((authorize) -> authorize
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // localhost:3000 // OPTIONS 요청에 대한 접근 허용
+//                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll() // localhost:3000 // OPTIONS 요청에 대한 접근 허용
                         .requestMatchers("/health", "member/signup", "auth/login", "/login/**").permitAll()
                         .requestMatchers("/admin/**").hasRole("ADMIN")
                         .requestMatchers("/mentor/create").hasAnyRole("USER","MENTOR")
                         .requestMatchers("/mentor/list").permitAll()
                         .requestMatchers("/mentee/**").hasAnyRole("USER","MENTEE")
                         .requestMatchers("/member/**").hasAnyRole("ADMIN","USER","MENTOR","MENTEE")
+                                .requestMatchers("/member/get").authenticated()
                         .requestMatchers("/member/extract").permitAll()
                         .requestMatchers("/mentoring/create").hasAnyRole("MENTOR")
-                        .requestMatchers("/mentoring/get/**","/mentoring/list").permitAll()
+                        .requestMatchers("/mentoring/get/**").permitAll()
+                        .requestMatchers("/mentoring/list").permitAll()
                         .requestMatchers("/api/v1/payments/**").permitAll()
                         .anyRequest().authenticated() //그 외 나머지는 인증 완료 후 접근 가능
                 )
-                .with(new CustomFilterConfigurer(), Customizer.withDefaults()) // apply(new CustomFilterConfigurer) 로그인 경로 삽입
                 .httpBasic(AbstractHttpConfigurer::disable) // .httpBasic((httpBasic) -> httpBasic.disable())
                 .exceptionHandling(AbstractHttpConfigurer::disable)
-                .formLogin(AbstractHttpConfigurer::disable)
-                .oauth2Login(oauth2 -> oauth2.successHandler(OAuth2MemberSuccessHandler.builder().jwtTokenizer(jwtTokenizer).authorityUtils(authorityUtils).build()));
+                .formLogin(AbstractHttpConfigurer::disable);
+//                .oauth2Login(oauth2 -> oauth2.successHandler(OAuth2MemberSuccessHandler.builder().jwtTokenizer(jwtTokenizer).authorityUtils(authorityUtils).build()));
 
         return http.build();
     }
@@ -106,8 +108,8 @@ public class SecurityConfig {
         CorsConfiguration configuration = new CorsConfiguration();
 
         configuration.setAllowCredentials(true); // option요청에 Access-Control-Allow-Origin 추가 > 403 문제 발생
-        configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://project-magnet.github.io/magnet"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST", "PATCH", "DELETE","OPTIONS"));  // http 통신 허용
+        configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://www.project-magnet.site", "https://api.tosspayments.com/v1/payments/", "https://project-magnet.site"));
+        configuration.setAllowedMethods(Arrays.asList("GET","POST", "PATCH","DELETE","OPTIONS"));  // http 통신 허용
         configuration.setAllowedHeaders(List.of("*"));// 문제 해결
         configuration.setExposedHeaders(List.of("Authorization", "RefreshToken","Access-Control-Allow-Origin"));
 
@@ -134,8 +136,8 @@ public class SecurityConfig {
 
             builder
                     .addFilter(jwtAuthenticationFilter)
-                    .addFilterAfter(jwtVerificationFilter, JwtAuthenticationFilter.class)
-                    .addFilterAfter(jwtVerificationFilter, OAuth2LoginAuthenticationFilter.class); // jwtVerificationFilter 이후에 와야한다는 의미
+                    .addFilterAfter(jwtVerificationFilter, JwtAuthenticationFilter.class);
+//                    .addFilterAfter(jwtVerificationFilter, OAuth2LoginAuthenticationFilter.class); // jwtVerificationFilter 이후에 와야한다는 의미
 
             logger.info("jwtVerificationFilter 뒤에 로컬 로그인, oauth2 검증 필터 추가");
         }
